Add request to list extensions sampled for a sensor / date.

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,11 @@
     <td>application/json</td>
 </tr>
 <tr>
+    <td class="req">/did/date/sid.json</td>
+    <td>Get extensions sampled for sid on date</td>
+    <td>application/json</td>
+</tr>
+<tr>
     <td class="req">/did/date/sid.ext.json</td>
     <td rowspan="2">Get sensor sample data</td>
     <td>application/json</td>
