--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,10 @@
     <td>ext</td>
     <td>Extension (v30, c30, s30, vmc30, vs30, vm30, vl30, pr60, pt60)</td>
 </tr>
+<tr>
+    <td>cor</td>
+    <td>Corridor and direction (ex: ExampleHwyNB)</td>
+</tr>
 </table>
 
 <br/>
@@ -87,6 +91,24 @@
 <tr>
     <td class="req">/did/date/sid.ext</td>
     <td>application/octet-stream</td>
+</tr>
+<tr>
+    <td class="req">/metro_config/date.xml</td>
+	<td rowspan="2">Get metro_config on date</td>
+	<td>application/xml</td>
+</tr>
+<tr>
+    <td class="req">/metro_config/date.json</td>
+	<td>application/json</td>
+</tr>
+<tr>
+    <td class="req">/metro_config/date/cor.xml</td>
+	<td rowspan="2">Get corridor config on date</td>
+	<td>application/xml</td>
+</tr>
+<tr>
+    <td class="req">/metro_config/date/cor.json</td>
+	<td>application/json</td>
 </tr>
 </table>
 
