--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,12 @@
     <td>Extension (v30, c30, s30, vmc30, vs30, vm30, vl30, pr60, pt60)</td>
 </tr>
 <tr>
-    <td>cor</td>
-    <td>Corridor and direction (ex: ExampleHwyNB)</td>
+    <td>rte</td>
+    <td>Name of the route as it appears in metro_config.xml</td>
+</tr>
+<tr>
+    <td>dir</td>
+    <td>Direction of the route (NB, SB, EB, WB)</td>
 </tr>
 </table>
 
@@ -93,6 +97,11 @@
     <td>application/octet-stream</td>
 </tr>
 <tr>
+	<td class="req">/metro_config/date/corridors</td>
+	<td>Get list of corridors on date</td>
+	<td>application/json</td>
+</tr>
+<tr>
     <td class="req">/metro_config/date.xml</td>
 	<td rowspan="2">Get metro_config on date</td>
 	<td>application/xml</td>
@@ -102,12 +111,12 @@
 	<td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date/cor.xml</td>
+    <td class="req">/metro_config/date/rte_dir.xml</td>
 	<td rowspan="2">Get corridor config on date</td>
 	<td>application/xml</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date/cor.json</td>
+    <td class="req">/metro_config/date/rte_dir.json</td>
 	<td>application/json</td>
 </tr>
 </table>
