--- a/src/index.html
+++ b/src/index.html
@@ -25,31 +25,31 @@
     <th>Description</th>
 </tr>
 <tr>
-    <td>did</td>
+    <td class="prm">did</td>
     <td>District ID of detection system</td>
 </tr>
 <tr>
-    <td>year</td>
+    <td class="prm">year</td>
     <td>4-digit year</td>
 </tr>
 <tr>
-    <td>date</td>
+    <td class="prm">date</td>
     <td>8-digit date (yyyyMMdd)</td>
 </tr>
 <tr>
-    <td>sid</td>
+    <td class="prm">sid</td>
     <td>Sensor ID</td>
 </tr>
 <tr>
-    <td>ext</td>
+    <td class="prm">ext</td>
     <td>Extension (v30, c30, s30, vmc30, vs30, vm30, vl30, pr60, pt60)</td>
 </tr>
 <tr>
-    <td>rte</td>
+    <td class="prm">rte</td>
     <td>Name of the route as it appears in metro_config.xml</td>
 </tr>
 <tr>
-    <td>dir</td>
+    <td class="prm">dir</td>
     <td>Direction of the route (NB, SB, EB, WB)</td>
 </tr>
 </table>
@@ -73,50 +73,50 @@
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/year.json</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">year</span>.json</td>
     <td>Get sampled dates</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/date</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">date</span></td>
     <td>Get sensors sampled on date</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/date/sid.json</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">date</span>/<span class="prm">sid</span>.json</td>
     <td>Get extensions sampled for sid on date</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/date/sid.ext.json</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span>.json</td>
     <td rowspan="2">Get sensor sample data</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/date/sid.ext</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span></td>
     <td>application/octet-stream</td>
 </tr>
 <tr>
-	<td class="req">/metro_config/date/corridors</td>
+	<td class="req">/metro_config/<span class="prm">date</span>/corridors</td>
 	<td>Get list of corridors on date</td>
 	<td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date.xml</td>
+    <td class="req">/metro_config/<span class="prm">date</span>.xml</td>
 	<td rowspan="2">Get metro_config on date</td>
 	<td>application/xml</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date.json</td>
+    <td class="req">/metro_config/<span class="prm">date</span>.json</td>
 	<td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date/rte_dir.xml</td>
+    <td class="req">/metro_config/<span class="prm">date</span>/<span class="prm">rte</span>_<span class="prm">dir</span>.xml</td>
 	<td rowspan="2">Get corridor config on date</td>
 	<td>application/xml</td>
 </tr>
 <tr>
-    <td class="req">/metro_config/date/rte_dir.json</td>
+    <td class="req">/metro_config/<span class="prm">date</span>/<span class="prm">rte</span>_<span class="prm">dir</span>.json</td>
 	<td>application/json</td>
 </tr>
 </table>
@@ -132,22 +132,22 @@
     <th>Content type</th>
 </tr>
 <tr>
-    <td class="req">/year</td>
+    <td class="req">/<span class="prm">year</span></td>
     <td>Get sampled dates</td>
     <td>text/plain</td>
 </tr>
 <tr>
-    <td class="req">/year/date</td>
+    <td class="req">/<span class="prm">year</span>/<span class="prm">date</span></td>
     <td>Get sensors sampled on date</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/year/date/sid.ext.json</td>
+    <td class="req">/<span class="prm">year</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span>.json</td>
     <td rowspan="2">Get sensor sample data</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/year/date/sid.ext</td>
+    <td class="req">/<span class="prm">year</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span></td>
     <td>application/octet-stream</td>
 </tr>
 </table>
@@ -160,22 +160,22 @@
     <th>Content type</th>
 </tr>
 <tr>
-    <td class="req">/did/year</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">year</span></td>
     <td>Get sampled dates</td>
     <td>text/plain</td>
 </tr>
 <tr>
-    <td class="req">/did/year/date</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">year</span>/<span class="prm">date</span></td>
     <td>Get sensors sampled on date</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/year/date/sid.ext.json</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">year</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span>.json</td>
     <td rowspan="2">Get sensor sample data</td>
     <td>application/json</td>
 </tr>
 <tr>
-    <td class="req">/did/year/date/sid.ext</td>
+    <td class="req">/<span class="prm">did</span>/<span class="prm">year</span>/<span class="prm">date</span>/<span class="prm">sid</span>.<span class="prm">ext</span></td>
     <td>application/octet-stream</td>
 </tr>
 </table>
